# playwrightTestsClaude

./: .env.example  .env.production  .gitattributes  .gitignore  .gitlab-ci.yml  BUG_ANALYSIS_AND_FIX_PLAN.md  BUG_FIXES_IMPLEMENTED.md  CICD_IMPLEMENTATION_COMPLETE.md  CICD_page.md  CLAUDE.md  CLAUDE_CODE_SKILLS_GUIDE.md  CODEBASE_CLEANUP_SUMMARY.md  CODE_RUNNER_MCP_GUIDE.md  COMPLETE_CLAUDE_SKILLS_GUIDE.md  COM_DEPLOYMENT_AND_INTEGRATION_PLAN.md  COM_ORCHESTRATOR_EXECUTION_PLAN.md  COM_PHASE1_IMPLEMENTATION_SUMMARY.md  COM_PHASE2_IMPLEMENTATION_SUMMARY.md  COVERAGE_CALCULATION_REDESIGN_COMPLETE.md  CUsersgalsDesktoptest_response.json  FIXES_COMPLETED.md  IMPLEMENTATION_SUMMARY.md  JENKINS_PIPELINE_README.md  Jenkinsfile  MASTER_TEST_PROGRESS.md  MERGE_AND_VERIFICATION_STATUS.md  Makefile  NEXT_SESSION_INSTRUCTIONS.md  PATH_FIXES_SUMMARY.md  PHASE_2.1_TESTING_STATUS.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_INTEGRATION_TEST_REPORT.md  PHASE_2_PROGRESS_UPDATE.md  PROPOSAL.md  QA_INTELLIGENCE_COMPLETE_DEVELOPMENT_PLAN.md  QA_INTELLIGENCE_COMPLETE_SUMMARY.md  QA_INTELLIGENCE_COMPREHENSIVE_OVERVIEW.md  QA_INTELLIGENCE_FIX_PROGRESS.md  QUICK_START.md  README.md  (+20 more)
com/: .env.example  README.md  pyproject.toml  requirements.txt  start.bat  start.sh  verify_installation.py
com/api/: main.py
com/cli/: main.py
com/core/: flaky_registry.py  memory_journal.py  models.py  policy_engine.py  regression_selector.py  roll_ups.py
com/docs/: FINAL_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md
com/policies/: qa_code_review_py.yaml  qa_flaky_triage.yaml  qa_healing.yaml  (+2 more)
(+1942 files in other folders)
